--- a/MduiBlazor.Shared/Pages/Inputs.razor
+++ b/MduiBlazor.Shared/Pages/Inputs.razor
@@ -42,7 +42,7 @@
         <MduiCheckbox Label="勾选" @bind-Value="@info.checkboxValue" />
     </MduiField>
     <MduiField Label="Switch">
-        <MduiSwitch @bind-Value="@info.checkboxValue" />
+        <MduiCheckbox Label="切换" Switch @bind-Value="@info.checkboxValue" />
     </MduiField>
     <MduiField Label="滑块">
         <MduiSlider @bind-Value="@info.Number1" Min="0" Max="100" />
