--- a/MduiBlazor.Shared/Pages/List.razor
+++ b/MduiBlazor.Shared/Pages/List.razor
@@ -257,12 +257,12 @@
     <MduiListItem>
         <MduiListItemIcon Icon="network_wifi" />
         <MduiListItemContent>Wi-Fi</MduiListItemContent>
-        <MduiSwitch Value />
+        <MduiCheckbox Switch Value="@true" />
     </MduiListItem>
     <MduiListItem>
         <MduiListItemIcon Icon="bluetooth" />
         <MduiListItemContent>Bluetooth</MduiListItemContent>
-        <MduiSwitch />
+        <MduiCheckbox Switch />
     </MduiListItem>
     <MduiListItem>
         <MduiListItemIcon Icon="data_usage" />
