--- a/MduiBlazor.Shared/Pages/TextfieldPage.razor
+++ b/MduiBlazor.Shared/Pages/TextfieldPage.razor
@@ -62,3 +62,212 @@
     <MduiText id="expandable" Typo="@Typo.subheading"><b>可展开文本框</b></MduiText>
     <ExampleSection Component="@typeof(ExpandableTextfield)" />
 </div>
+
+<MduiDivider Class="mdui-m-y-5" />
+
+<div>
+    <h2 id="attr">
+        <MduiText Typo="@Typo.headline" Color="@Colors.Theme.Primary">属性/方法/事件</MduiText>
+    </h2>
+
+    <MduiTableContainer UseMduiTypo Class="mdui-m-y-1">
+         <MduiSimpleTable>
+             <thead>
+                 <th>参数名称</th>
+                 <th>类型/返回类型</th>
+                 <th>说明</th>
+             </thead>
+             <tbody>
+                 <tr>
+                     <td>
+                         <code>Name</code>
+                     </td>
+                     <td>
+                         <code>string?</code>
+                     </td>
+                     <td><code>input</code>标签的<code>name</code>属性。</td>
+                 </tr>
+                 <tr>
+                     <td>
+                         <code>Value</code>
+                     </td>
+                     <td>
+                         <code>string?</code>
+                     </td>
+                     <td><code>input</code>标签的值。</td>
+                 </tr>
+                 <tr>
+                     <td>
+                         <code>ValueChanged</code>
+                     </td>
+                     <td>
+                         <code>EventCallback&lt;string&gt;</code>
+                     </td>
+                     <td><code>input</code>标签值修改后的回调函数，一般用于双向绑定。</td>
+                 </tr>
+                 <tr>
+                     <td>
+                         <code>ValueExpression</code>
+                     </td>
+                     <td>
+                         <code>Expression&lt;Func&lt;string&gt;&gt;?</code>
+                     </td>
+                     <td>双向绑定下不用设置该参数。</td>
+                 </tr>
+                 <tr>
+                     <td>
+                         <code>Disabled</code>
+                     </td>
+                     <td>
+                         <code>bool</code>
+                     </td>
+                     <td>是否禁用，默认<code>false</code>。</td>
+                 </tr>
+                 <tr>
+                     <td>
+                         <code>Label</code>
+                     </td>
+                     <td>
+                         <code>string?</code>
+                     </td>
+                     <td>标签显示的文本。</td>
+                 </tr>
+                 <tr>
+                     <td>
+                         <code>LabelRequired</code>
+                     </td>
+                     <td>
+                         <code>bool</code>
+                     </td>
+                     <td>是否显示必填<code>*</code>，默认<code>false</code>。</td>
+                 </tr>
+                 <tr>
+                     <td>
+                         <code>Icon</code>
+                     </td>
+                     <td>
+                         <code>string?</code>
+                     </td>
+                     <td>要显示的图标类名。</td>
+                 </tr>
+                 <tr>
+                     <td>
+                         <code>ErrorText</code>
+                     </td>
+                     <td>
+                         <code>string?</code>
+                     </td>
+                     <td>自定义的错误提示信息。</td>
+                 </tr>
+                 <tr>
+                     <td>
+                         <code>HelperText</code>
+                     </td>
+                     <td>
+                         <code>string?</code>
+                     </td>
+                     <td>要显示的帮助提示信息。</td>
+                 </tr>
+                 <tr>
+                     <td>
+                         <code>FloatingLabel</code>
+                     </td>
+                     <td>
+                         <code>bool</code>
+                     </td>
+                     <td>是否浮动标签，默认<code>false</code>。</td>
+                 </tr>
+                 <tr>
+                     <td>
+                         <code>AutoFocus</code>
+                     </td>
+                     <td>
+                         <code>bool</code>
+                     </td>
+                     <td>是否自动获取焦点，默认<code>false</code>。</td>
+                 </tr>
+                 <tr>
+                     <td>
+                         <code>Required</code>
+                     </td>
+                     <td>
+                         <code>bool</code>
+                     </td>
+                     <td>是否必填项，默认<code>false</code>。</td>
+                 </tr>
+                 <tr>
+                     <td>
+                         <code>Readonly</code>
+                     </td>
+                     <td>
+                         <code>bool</code>
+                     </td>
+                     <td>是否只读，默认<code>false</code>。</td>
+                 </tr>
+                 <tr>
+                     <td>
+                         <code>Placeholder</code>
+                     </td>
+                     <td>
+                         <code>string?</code>
+                     </td>
+                     <td>要显示的占位符。</td>
+                 </tr>
+                 <tr>
+                     <td>
+                         <code>MaxLength</code>
+                     </td>
+                     <td>
+                         <code>int?</code>
+                     </td>
+                     <td>允许输入的最大长度。</td>
+                 </tr>
+                 <tr>
+                     <td>
+                         <code>Rows</code>
+                     </td>
+                     <td>
+                         <code>int</code>
+                     </td>
+                     <td>文本框行数，默认<code>1</code>，当该参数大于1时，组件渲染为<code>textarea</code>。</td>
+                 </tr>
+                 <tr>
+                     <td>
+                         <code>Type</code>
+                     </td>
+                     <td>
+                         <code>string?</code>
+                     </td>
+                     <td><code>input</code>标签的类型，默认<code>text</code>。</td>
+                 </tr>
+                 <tr>
+                     <td>
+                         <code>Pattern</code>
+                     </td>
+                     <td>
+                         <code>string?</code>
+                     </td>
+                     <td><code>input</code>标签的输入格式。</td>
+                 </tr>
+                 <tr>
+                     <td>
+                         <code>Trim</code>
+                     </td>
+                     <td>
+                         <code>bool</code>
+                     </td>
+                     <td>是否去掉标签值首末空格，默认<code>false</code>。</td>
+                 </tr>
+                 <tr>
+                     <td>
+                         <code>OnInput</code>
+                     </td>
+                     <td>
+                         <code>EventCallback&lt;string&gt;</code>
+                     </td>
+                     <td>标签输入时的回调函数。</td>
+                 </tr>
+             </tbody>
+         </MduiSimpleTable>
+     </MduiTableContainer>
+ </div>
