--- a/MduiBlazor/Components/Input/MduiMultiSelect.razor
+++ b/MduiBlazor/Components/Input/MduiMultiSelect.razor
@@ -2,8 +2,9 @@
 @inherits MduiInputBase<TValue>
 @typeparam TValue
 
-<select @ref="@Element" multiple="multiple" size="@Height" class="@Classname" style="@Style" required="@Required"
-        @attributes="@AdditionalAttributes" value="@BindConverter.FormatValue(CurrentValue)?.ToString()"
-        @onchange="@(EventCallback.Factory.CreateBinder<string[]?>(this,SetCurrentValueAsStringArray,default))">
+<select @ref="@Element" multiple="multiple" size="@Height" class="@Classname" style="@Style" name="@Name"
+    required="@Required" disabled="@Disabled" @attributes="@AdditionalAttributes"
+    value="@BindConverter.FormatValue(CurrentValue)?.ToString()"
+@onchange="@(EventCallback.Factory.CreateBinder<string[]?>(this,SetCurrentValueAsStringArray,default))">
     @ChildContent
 </select>
