--- a/MduiBlazor/Components/Input/MduiTextField.razor
+++ b/MduiBlazor/Components/Input/MduiTextField.razor
@@ -4,8 +4,7 @@
 <MduiField @ref="@_field" Class="@Classname" Style="@Style" AdditionalAttributes="@AdditionalAttributes"
        Disabled="@Disabled" Label="@Label" Icon="@Icon" HelperText="@HelperText" ErrorText="@ErrorText"
        UseMduiTypo="@UseMduiTypo">
-       <MduiInputText Value="@Value" ValueChanged="@OnValueChanged" ValueExpression="@ValueExpression" Type="@Type"
-              AutoFocus="@AutoFocus" Disabled="@Disabled" MaxLength="@MaxLength" Pattern="@Pattern"
-              Placeholder="@Placeholder" OnInput="@OnInput" Readonly="@Readonly" Required="@Required" Rows="@Rows"
+       <MduiInputText Value="@Value" ValueChanged="@OnValueChanged" ValueExpression="@ValueExpression" Name="@Name" Type="@Type"
+              AutoFocus="@AutoFocus" Disabled="@Disabled" MaxLength="@MaxLength" Pattern="@Pattern" Placeholder="@Placeholder" OnInput="@OnInput" Readonly="@Readonly" Required="@Required" Rows="@Rows"
               Trim="@Trim" />
 </MduiField>
