--- a/MduiBlazor/wwwroot/css/mdui.css
+++ b/MduiBlazor/wwwroot/css/mdui.css
@@ -8839,9 +8839,11 @@ th.mdui-table-cell-checkbox .mdui-checkbox {
  * =============================================================================
  */
 .mdui-switch {
+  position: relative;
   display: inline-block;
   height: 36px;
   margin: 0 18px;
+  padding-left: 42px;
   line-height: 36px;
   cursor: pointer;
   -webkit-user-select: none;
@@ -8858,7 +8860,9 @@ th.mdui-table-cell-checkbox .mdui-checkbox {
 }
 /* 图标轨道 */
 .mdui-switch-icon {
-  position: relative;
+  position: absolute;
+  top: 9px;
+  left: 0;
   display: inline-block;
   width: 36px;
   height: 14px;
