--- a/mdui/src/components/selection_control/switch.less
+++ b/mdui/src/components/selection_control/switch.less
@@ -5,9 +5,11 @@
  */
 
 .mdui-switch {
+  position: relative;
   display: inline-block;
   height: 36px;
   margin: 0 18px;
+  padding-left: 42px;
   line-height: 36px;
   cursor: pointer;
   user-select: none;
@@ -24,7 +26,9 @@
 
 /* 图标轨道 */
 .mdui-switch-icon {
-  position: relative;
+  position: absolute;
+  top: 9px;
+  left: 0;
   display: inline-block;
   width: 36px;
   height: 14px;
