--- a/MduiBlazor/Components/Input/MduiCheckbox.razor
+++ b/MduiBlazor/Components/Input/MduiCheckbox.razor
@@ -1,11 +1,12 @@
 @namespace MduiBlazor
 @inherits MduiInputBase<bool>
 
-<label class="mdui-checkbox">
-    <input @ref="@Element" type="checkbox" class="@Class" style="@Style" required="@Required" disabled="@Disabled"
-        readonly="@Readonly" @attributes="@AdditionalAttributes" checked="@BindConverter.FormatValue(CurrentValue)"
-           @onchange="@(EventCallback.Factory.CreateBinder<bool>(this,__value=>CurrentValue=__value,CurrentValue))" />
-    <i class="mdui-checkbox-icon"></i>
+<label class="mdui-@TypeName">
+    <input @ref="@Element" type="checkbox" class="@Class" style="@Style" name="@Name" required="@Required"
+        disabled="@Disabled" readonly="@Readonly" @attributes="@AdditionalAttributes"
+        checked="@BindConverter.FormatValue(CurrentValue)"
+    @onchange="@(EventCallback.Factory.CreateBinder<bool>(this,__value=>CurrentValue=__value,CurrentValue))" />
+    <i class="mdui-@TypeName-icon"></i>
     @if (ChildContent is not null)
     {
         @ChildContent
