--- a/MduiBlazor/Components/Input/MduiInputText.razor
+++ b/MduiBlazor/Components/Input/MduiInputText.razor
@@ -3,19 +3,19 @@
 
 @if (Rows > 1)
 {
-    <textarea @ref="@Element" class="@Classname" style="@Style" rows="@Rows" required="@Required" pattern="@Pattern"
-              maxlength="@MaxLength" placeholder="@Placeholder" disabled="@Disabled" readonly="@Readonly"
-              autofocus="@AutoFocus" @attributes="@AdditionalAttributes" value="@BindConverter.FormatValue(CurrentValueAsString)"
-          @onchange="@(EventCallback.Factory.CreateBinder<string?>(this, __value => CurrentValueAsString = __value, CurrentValueAsString))"
-          @onfocus="@OnFocus" @onblur="@OnBlur" @oninput="@OnTextInput" />
+    <textarea @ref="@Element" class="@Classname" style="@Style" name="@Name" rows="@Rows" required="@Required"
+        pattern="@Pattern" maxlength="@MaxLength" placeholder="@Placeholder" disabled="@Disabled" readonly="@Readonly"
+        autofocus="@AutoFocus" @attributes="@AdditionalAttributes" value="@BindConverter.FormatValue(CurrentValueAsString)"
+    @onchange="@(EventCallback.Factory.CreateBinder<string?>(this, __value => CurrentValueAsString = __value, CurrentValueAsString))"
+    @onfocus="@OnFocus" @onblur="@OnBlur" @oninput="@OnTextInput" />
 }
 else
 {
-    <input @ref="@Element" class="@Classname" style="@Style" type="@Type" required="@Required" pattern="@Pattern"
-           maxlength="@MaxLength" placeholder="@Placeholder" disabled="@Disabled" readonly="@Readonly"
-           autofocus="@AutoFocus" @attributes="@AdditionalAttributes" value="@BindConverter.FormatValue(CurrentValueAsString)"
-       @onchange="@(EventCallback.Factory.CreateBinder<string?>(this, __value => CurrentValueAsString = __value, CurrentValueAsString))"
-       @onfocus="@OnFocus" @onblur="@OnBlur" @oninput="@OnTextInput" />
+    <input @ref="@Element" class="@Classname" style="@Style" name="@Name" type="@Type" required="@Required"
+        pattern="@Pattern" maxlength="@MaxLength" placeholder="@Placeholder" disabled="@Disabled" readonly="@Readonly"
+        autofocus="@AutoFocus" @attributes="@AdditionalAttributes" value="@BindConverter.FormatValue(CurrentValueAsString)"
+    @onchange="@(EventCallback.Factory.CreateBinder<string?>(this, __value => CurrentValueAsString = __value, CurrentValueAsString))"
+    @onfocus="@OnFocus" @onblur="@OnBlur" @oninput="@OnTextInput" />
 }
 @if (MaxLength > 0 && MaxLength <= int.MaxValue)
 {
