--- a/MduiBlazor/Components/Input/MduiNumbericField.razor
+++ b/MduiBlazor/Components/Input/MduiNumbericField.razor
@@ -2,10 +2,9 @@
 @inherits MduiComponentBase
 @typeparam TValue
 
-<MduiField Class="@Classname" Style="@Style" AdditionalAttributes="@AdditionalAttributes"
-    Disabled="@Disabled" Label="@Label" Icon="@Icon" HelperText="@HelperText" ErrorText="@ErrorText"
-    UseMduiTypo="@UseMduiTypo">
+<MduiField Class="@Classname" Style="@Style" AdditionalAttributes="@AdditionalAttributes" Disabled="@Disabled"
+    Label="@Label" Icon="@Icon" HelperText="@HelperText" ErrorText="@ErrorText" UseMduiTypo="@UseMduiTypo">
     <MduiInputNumber TValue="@TValue" Value="@Value" ValueChanged="@OnValueChanged" ValueExpression="@ValueExpression"
-        AutoFocus="@AutoFocus" Disabled="@Disabled" Step="@Step" Min="@Min" Max="@Max" Placeholder="@Placeholder"
-        Readonly="@Readonly" Required="@Required" />
+        Name="@Name" AutoFocus="@AutoFocus" Disabled="@Disabled" Step="@Step" Min="@Min" Max="@Max"
+        Placeholder="@Placeholder" Readonly="@Readonly" Required="@Required" />
 </MduiField>
