--- a/MduiBlazor/Components/Input/MduiSelect.razor
+++ b/MduiBlazor/Components/Input/MduiSelect.razor
@@ -2,8 +2,8 @@
 @typeparam TValue
 @inherits MduiInputBase<TValue>
 
-<select class="@Classname" style="@Style" disabled="@Disabled" required="@Required" @attributes="@AdditionalAttributes"
-    value="@CurrentValueAsString"
-    @onchange="@(EventCallback.Factory.CreateBinder<string?>(this,__value=>CurrentValueAsString=__value,default))">
+<select class="@Classname" style="@Style" name="@Name" disabled="@Disabled" required="@Required"
+@attributes="@AdditionalAttributes" value="@CurrentValueAsString"
+@onchange="@(EventCallback.Factory.CreateBinder<string?>(this,__value=>CurrentValueAsString=__value,default))">
     @ChildContent
 </select>
