--- a/MduiBlazor.Shared/Pages/SelectControlPage.razor
+++ b/MduiBlazor.Shared/Pages/SelectControlPage.razor
@@ -119,6 +119,27 @@
                      </td>
                      <td>是否禁用，默认<code>false</code>。</td>
                  </tr>
+                 <tr>
+                     <td rowspan="2">
+                         <code>MduiCheckbox</code>
+                     </td>
+                     <td>
+                         <code>Switch</code>
+                     </td>
+                     <td>
+                         <code>bool</code>
+                     </td>
+                     <td>是否渲染为开关模式，默认<code>false</code>。</td>
+                 </tr>
+                 <tr>
+                     <td>
+                         <code>Label</code>
+                     </td>
+                     <td>
+                         <code>string?</code>
+                     </td>
+                     <td>标签显示的文本。</td>
+                 </tr>
              </tbody>
          </MduiSimpleTable>
      </MduiTableContainer>
