--- a/MduiBlazor.Shared/Shared/NavMenu.razor
+++ b/MduiBlazor.Shared/Shared/NavMenu.razor
@@ -21,6 +21,7 @@
         <MduiNavMenuItem Href="panels">可扩展面板</MduiNavMenuItem>
         <MduiNavMenuItem Href="textfield">文本框</MduiNavMenuItem>
         <MduiNavMenuItem Href="selectcontrol">选择控件</MduiNavMenuItem>
+        <MduiNavMenuItem Href="slider">滑块</MduiNavMenuItem>
         <MduiNavMenuItem Href="cards">Cards</MduiNavMenuItem>
         <MduiNavMenuItem Href="chips">Chips</MduiNavMenuItem>
         <MduiNavMenuItem Href="dialogs">Dialogs</MduiNavMenuItem>
